samples/_failures_safe/1761554299_bab2e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7130c49b.c: In function ‘main’:
./samples/SAFE/__tmp_7130c49b.c:129:39: error: expected ‘)’ at end of input
  129 |     display_entries_by_level(&analyzer
      |                             ~         ^
      |                                       )
./samples/SAFE/__tmp_7130c49b.c:129:5: error: too few arguments to function ‘display_entries_by_level’
  129 |     display_entries_by_level(&analyzer
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7130c49b.c:98:6: note: declared here
   98 | void display_entries_by_level(const struct LogAnalyzer *analyzer, const char *level) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7130c49b.c:129:5: error: expected declaration or statement at end of input
  129 |     display_entries_by_level(&analyzer
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
